Fix conflicts